Migrate Spring Batch Infrastructure to JUnit Jupiter