@@ -26,8 +26,8 @@ import javax.xml.stream.XMLStreamException;
 import javax.xml.transform.Result;
 
 import org.apache.commons.io.FileUtils;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.batch.item.ExecutionContext;
 import org.springframework.batch.item.UnexpectedInputException;
@@ -46,10 +46,11 @@ import org.springframework.util.Assert;
 import org.springframework.util.ClassUtils;
 import org.springframework.util.StringUtils;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -109,7 +110,7 @@ public class StaxEventItemWriterTests {
 
 	private Jaxb2Marshaller jaxbMarshaller;
 
-	@Before
+	@BeforeEach
 	public void setUp() throws Exception {
 		File directory = new File("target/data");
 		directory.mkdirs();
@@ -130,15 +131,15 @@ public class StaxEventItemWriterTests {
 		writer.write(items);
 		writer.update(executionContext);
 		writer.close();
-		assertTrue("execution context keys should be prefixed with writer name",
-				executionContext.containsKey("test.position"));
+		assertTrue(executionContext.containsKey("test.position"),
+				"execution context keys should be prefixed with writer name");
 	}
 
-	@Test(expected = WriterNotOpenException.class)
-	public void testAssertWriterIsInitialized() throws Exception {
+	@Test
+	public void testAssertWriterIsInitialized() {
 		StaxEventItemWriter<String> writer = new StaxEventItemWriter<>();
 
-		writer.write(Collections.singletonList("foo"));
+		assertThrows(WriterNotOpenException.class, () -> writer.write(List.of("foo")));
 	}
 
 	@Test
@@ -179,7 +180,7 @@ public class StaxEventItemWriterTests {
 		writer.write(items);
 		writer.close();
 		String content = getOutputFileContent();
-		assertTrue("Wrong content: " + content, content.contains(TEST_STRING));
+		assertTrue(content.contains(TEST_STRING), "Wrong content: " + content);
 	}
 
 	@Test
@@ -189,7 +190,7 @@ public class StaxEventItemWriterTests {
 		writer.write(items);
 		writer.close();
 		String content = getOutputFileContent();
-		assertTrue("Wrong content: " + content, content.contains(TEST_STRING));
+		assertTrue(content.contains(TEST_STRING), "Wrong content: " + content);
 	}
 
 	/**
@@ -407,8 +408,8 @@ public class StaxEventItemWriterTests {
 		writer.open(executionContext);
 		writer.write(items);
 		String content = getOutputFileContent();
-		assertTrue("Wrong content: " + content, content.contains(("<header/>")));
-		assertTrue("Wrong content: " + content, content.contains(TEST_STRING));
+		assertTrue(content.contains(("<header/>")), "Wrong content: " + content);
+		assertTrue(content.contains(TEST_STRING), "Wrong content: " + content);
 	}
 
 	/**
@@ -506,7 +507,7 @@ public class StaxEventItemWriterTests {
 		writer.write(items);
 		writer.close();
 		String content = getOutputFileContent();
-		assertTrue("Wrong content: " + content, content.contains(TEST_STRING));
+		assertTrue(content.contains(TEST_STRING), "Wrong content: " + content);
 	}
 
 	/**
@@ -518,7 +519,7 @@ public class StaxEventItemWriterTests {
 		writer.setShouldDeleteIfEmpty(true);
 		writer.open(executionContext);
 		writer.close();
-		assertFalse("file should be deleted" + resource, resource.getFile().exists());
+		assertFalse(resource.getFile().exists(), "file should be deleted" + resource);
 	}
 
 	/**
@@ -562,7 +563,7 @@ public class StaxEventItemWriterTests {
 		});
 		writer.open(executionContext);
 		writer.close();
-		assertFalse("file should be deleted" + resource, resource.getFile().exists());
+		assertFalse(resource.getFile().exists(), "file should be deleted" + resource);
 	}
 
 	/**
@@ -582,7 +583,7 @@ public class StaxEventItemWriterTests {
 		writer.open(executionContext);
 		writer.close();
 		String content = getOutputFileContent();
-		assertTrue("Wrong content: " + content, content.contains(TEST_STRING));
+		assertTrue(content.contains(TEST_STRING), "Wrong content: " + content);
 	}
 
 	/**
@@ -602,7 +603,7 @@ public class StaxEventItemWriterTests {
 		writer.update(executionContext);
 		writer.close();
 		String content = getOutputFileContent();
-		assertTrue("Wrong content: " + content, content.contains(TEST_STRING));
+		assertTrue(content.contains(TEST_STRING), "Wrong content: " + content);
 	}
 
 	/**
@@ -647,13 +648,13 @@ public class StaxEventItemWriterTests {
 		writer.open(executionContext);
 		writer.update(executionContext);
 		writer.close();
-		assertFalse("file should be deleted" + resource, resource.getFile().exists());
+		assertFalse(resource.getFile().exists(), "file should be deleted" + resource);
 		writer.open(executionContext);
 		writer.write(items);
 		writer.update(executionContext);
 		writer.close();
 		String content = getOutputFileContent();
-		assertTrue("Wrong content: " + content, content.contains(TEST_STRING));
+		assertTrue(content.contains(TEST_STRING), "Wrong content: " + content);
 	}
 
 	/**
@@ -667,10 +668,10 @@ public class StaxEventItemWriterTests {
 		writer.write(items);
 		writer.close();
 		String content = getOutputFileContent();
-		assertTrue("Wrong content: " + content,
-				content.contains(("<root xmlns=\"https://www.springframework.org/test\">")));
-		assertTrue("Wrong content: " + content, content.contains(TEST_STRING));
-		assertTrue("Wrong content: " + content, content.contains(("</root>")));
+		assertTrue(content.contains(("<root xmlns=\"https://www.springframework.org/test\">")),
+				"Wrong content: " + content);
+		assertTrue(content.contains(TEST_STRING), "Wrong content: " + content);
+		assertTrue(content.contains(("</root>")), "Wrong content: " + content);
 	}
 
 	/**
@@ -686,11 +687,11 @@ public class StaxEventItemWriterTests {
 		writer.write(items);
 		writer.close();
 		String content = getOutputFileContent();
-		assertTrue("Wrong content: " + content,
-				content.contains(("<ns:root xmlns:ns=\"https://www.springframework.org/test\">")));
-		assertTrue("Wrong content: " + content, content.contains(NS_TEST_STRING));
-		assertTrue("Wrong content: " + content, content.contains(("</ns:root>")));
-		assertTrue("Wrong content: " + content, content.contains(("<ns:root")));
+		assertTrue(content.contains(("<ns:root xmlns:ns=\"https://www.springframework.org/test\">")),
+				"Wrong content: " + content);
+		assertTrue(content.contains(NS_TEST_STRING), "Wrong content: " + content);
+		assertTrue(content.contains(("</ns:root>")), "Wrong content: " + content);
+		assertTrue(content.contains(("<ns:root")), "Wrong content: " + content);
 	}
 
 	/**
@@ -707,11 +708,12 @@ public class StaxEventItemWriterTests {
 		writer.write(items);
 		writer.close();
 		String content = getOutputFileContent();
-		assertTrue("Wrong content: " + content, content.contains(
-				("<ns:root xmlns:ns=\"https://www.springframework.org/test\" " + "xmlns:foo=\"urn:org.test.foo\">")));
-		assertTrue("Wrong content: " + content, content.contains(FOO_TEST_STRING));
-		assertTrue("Wrong content: " + content, content.contains(("</ns:root>")));
-		assertTrue("Wrong content: " + content, content.contains(("<ns:root")));
+		assertTrue(content.contains(
+				("<ns:root xmlns:ns=\"https://www.springframework.org/test\" " + "xmlns:foo=\"urn:org.test.foo\">")),
+				"Wrong content: " + content);
+		assertTrue(content.contains(FOO_TEST_STRING), "Wrong content: " + content);
+		assertTrue(content.contains(("</ns:root>")), "Wrong content: " + content);
+		assertTrue(content.contains(("<ns:root")), "Wrong content: " + content);
 	}
 
 	/**
@@ -737,8 +739,8 @@ public class StaxEventItemWriterTests {
 		writer.close();
 
 		String content = getOutputFileContent();
-		assertEquals("Wrong content: " + content,
-				"<root xmlns=\"https://www.springframework.org/test\"><item/><item/></root>", content);
+		assertEquals("<root xmlns=\"https://www.springframework.org/test\"><item/><item/></root>", content,
+				"Wrong content: " + content);
 	}
 
 	/**
@@ -764,8 +766,8 @@ public class StaxEventItemWriterTests {
 		writer.close();
 
 		String content = getOutputFileContent();
-		assertEquals("Wrong content: " + content,
-				"<ns:root xmlns:ns=\"https://www.springframework.org/test\"><ns:item/><ns:item/></ns:root>", content);
+		assertEquals("<ns:root xmlns:ns=\"https://www.springframework.org/test\"><ns:item/><ns:item/></ns:root>",
+				content, "Wrong content: " + content);
 	}
 
 	/**
@@ -793,9 +795,9 @@ public class StaxEventItemWriterTests {
 		writer.close();
 
 		String content = getOutputFileContent();
-		assertEquals("Wrong content: " + content,
+		assertEquals(
 				"<foo:root xmlns:foo=\"urn:org.test.foo\" xmlns:ns=\"https://www.springframework.org/test\"><ns:item/><ns:item/></foo:root>",
-				content);
+				content, "Wrong content: " + content);
 	}
 
 	/**
@@ -836,9 +838,9 @@ public class StaxEventItemWriterTests {
 		writer.close();
 		String content = getOutputFileContent();
 
-		assertEquals("Wrong content: " + content,
+		assertEquals(
 				"<ns:testroot xmlns:ns=\"https://www.springframework.org/test\"><ns:group><StaxEventItemWriter-testString/></ns:group></ns:testroot>",
-				content);
+				content, "Wrong content: " + content);
 	}
 
 	/**
@@ -859,9 +861,9 @@ public class StaxEventItemWriterTests {
 		writer.close();
 		String content = getOutputFileContent();
 
-		assertEquals("Wrong content: " + content, "<ns:testroot xmlns:ns=\"https://www.springframework.org/test\">"
+		assertEquals("<ns:testroot xmlns:ns=\"https://www.springframework.org/test\">"
 				+ "<ns:group><StaxEventItemWriter-testString/><StaxEventItemWriter-testString/></ns:group></ns:testroot>",
-				content);
+				content, "Wrong content: " + content);
 	}
 
 	/**
@@ -882,13 +884,11 @@ public class StaxEventItemWriterTests {
 		writer.close();
 		String content = getOutputFileContent();
 
-		assertEquals("Wrong content: " + content,
-				"<ns:testroot xmlns:ns=\"https://www.springframework.org/test\">"
-						+ "<preHeader>PRE-HEADER</preHeader><ns:group><subGroup><postHeader>POST-HEADER</postHeader>"
-						+ "<StaxEventItemWriter-testString/><StaxEventItemWriter-testString/>"
-						+ "<preFooter>PRE-FOOTER</preFooter></subGroup></ns:group><postFooter>POST-FOOTER</postFooter>"
-						+ "</ns:testroot>",
-				content);
+		assertEquals("<ns:testroot xmlns:ns=\"https://www.springframework.org/test\">"
+				+ "<preHeader>PRE-HEADER</preHeader><ns:group><subGroup><postHeader>POST-HEADER</postHeader>"
+				+ "<StaxEventItemWriter-testString/><StaxEventItemWriter-testString/>"
+				+ "<preFooter>PRE-FOOTER</preFooter></subGroup></ns:group><postFooter>POST-FOOTER</postFooter>"
+				+ "</ns:testroot>", content, "Wrong content: " + content);
 	}
 
 	private void initWriterForSimpleCallbackTests() throws Exception {
